--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,7 +26,7 @@ theme:
   #favicon: assets/memex.png
   #logo: assets/spider_web.png
 
-  custom_dir: .overrides
+  custom_dir: overrides
   language: en
   features:
     - navigation.tabs
