--- a/docs/stats.yaml
+++ b/docs/stats.yaml
@@ -1,4 +1,4 @@
-firstPost: '2006-03-02 00:29:17+10:00'
-lastPost: '2025-01-12 15:19:03+10:00'
+firstPost: 2006-03-02T00:29:17.000000+1000
+lastPost: 2025-05-23T14:17:25.821396+0000
 numPages: 65
-numPosts: 1441
+numPosts: 1442
